--- a/testedefinitivoaula13/index.html
+++ b/testedefinitivoaula13/index.html
@@ -5,20 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verificador de Idade</title>
-    <link rel="shortcut icon" href="Goescat-Macaron-Gimp.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Verificador de Idade</h1>
+        <h1>Título</h1>
     </header>
     <section>
         <div>
+            Ano de Nascimento: <input type="number" name="txtano" id="txtano">
             <p>
-                Ano de Nascimento: <input type="number" name="txtano" id="txtano" min="0">
-            </p>
-            <p>
-                Sexo: <input type="radio" name="radsex" id="masc" checked>
+                Sexo: 
+                <input type="radio" name="radsex" id="masc" checked>
                 <label for="masc">Masculino</label>
                 <input type="radio" name="radsex" id="fem">
                 <label for="fem">Feminino</label>
@@ -28,7 +26,7 @@
             </p>
         </div>
         <div id="res">
-            Preencha os dados acima para ver o resultado!
+            Preencha os dados acima e tenha o resultado!
         </div>
     </section>
     <footer>
