--- a/aula14ex/ex016/modelo.html
+++ b/aula14ex/ex016/modelo.html
@@ -9,19 +9,22 @@
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Vamos Contar</h1>
     </header>
     <section>
             <div>
-                Testando...
+                <p>Início: <input type="number" name="initxt" id="initxt"></p>
+                <p>Fim: <input type="number" name="fimtxt" id="fimtxt"></p>
+                <p>Passo: <input type="number" name="pastxt" id="pastxt"></p>
+                <p><input type="button" value="Contar" onclick="contar()"></p>
             </div>
-            <div>
-                Olá!
+            <div id="res">
+                Preparando a contagem...
             </div>
     </section>
     <footer>
         <p>&copy; Ryns</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="contar.js"></script>
 </body>
 </html>
