--- a/aula10/ex006.html
+++ b/aula10/ex006.html
@@ -27,6 +27,7 @@
         area.addEventListener('click', clicar)
         area.addEventListener('mouseenter', entrar)
         area.addEventListener('mouseout', sair)
+exit
 
         function clicar() {
             area.innerText = 'Clicou!'
