--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -20,9 +20,9 @@
     <h1>Olá, mundo!</h1>
     <p>Já me livrei da maldição</p>
     <script>
-        window.alert('Minha primeira mensagem') 
-        window.confirm('Esta gostando de JS?')
-        window.prompt('Qual e o seu nome?')       
+        window.alert('Olá') 
+        window.confirm('Está gostando?')
+        window.prompt('Insira seu nome:')       
     </script>    
 </body>
 </html>
