--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title<!---Assim que se faz um comentário em HTML!-->
+    <title>Document</title><!---Assim que se faz um comentário em HTML!-->
     <style>
       body {
         background-color: rgb(83, 83, 82);
