--- a/aula10/ex006.html
+++ b/aula10/ex006.html
@@ -23,11 +23,10 @@
     </div>
 
     <script>
-        var area = Window.document.getElementById('area')
+        var area = window.document.getElementById('area')
         area.addEventListener('click', clicar)
         area.addEventListener('mouseenter', entrar)
         area.addEventListener('mouseout', sair)
-exit
 
         function clicar() {
             area.innerText = 'Clicou!'
